@@ -1,28 +1,0 @@
-This package was debianized by Michal Pena (Cyb.org) <mp@horisone.com> on
-Mon, 24 Jan 2005 23:57:45 +0100.
-
-It was downloaded from http://linux.bydg.org/~yogin/
-
-Copyright:
-
-Upstream Author: Pawel Stolowski <pawel.stolowski@wp.pl>
-
-License:
-
-   This package is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; version 2 dated June, 1991.
-
-   This package is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with this package; if not, write to the Free Software
-   Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston,
-   MA 02110-1301, USA.
-
-On Debian systems, the complete text of the GNU General
-Public License can be found in `/usr/share/common-licenses/GPL'.
-
