@@ -1,3 +1,0 @@
-usr/bin
-usr/share/qcomicbook
-usr/share/qcomicbook/help/en
