@@ -1,4 +1,0 @@
-AUTHORS
-README
-THANKS
-TODO
