@@ -1,295 +1,0 @@
-/* XPM */
-static char *qcomicbook[] = {
-/* columns rows colors chars-per-pixel */
-"32 32 257 2",
-"   c #000800090008",
-".  c #15150B8B0C0C",
-"X  c #111111111090",
-"o  c #1F1F35352F2F",
-"O  c #1B1B22222A2A",
-"+  c #29AA17981696",
-"@  c #323218181B1B",
-"#  c #27271F1F2323",
-"$  c #222220201F1F",
-"%  c #31B22C2C27A8",
-"&  c #383834B43434",
-"*  c #2D8331872A80",
-"=  c #1D9E3A3A4444",
-"-  c #3D3D37374141",
-";  c #3BE6469C378D",
-":  c #38384BCC3333",
-">  c #2828484843C4",
-",  c #353553534141",
-"<  c #3E3E67675D5D",
-"1  c #2A2A61616868",
-"2  c #40EB287E27D2",
-"3  c #4848383834F5",
-"4  c #54FF27D22525",
-"5  c #50D0363630B0",
-"6  c #75751E1E1E1E",
-"7  c #616125251B1B",
-"8  c #6C6C23232121",
-"9  c #6F6F2D2D3D3D",
-"0  c #777735352B2B",
-"q  c #79793A3A3A3A",
-"w  c #5C5C39394141",
-"e  c #6B6B39394E4E",
-"r  c #429854FF3939",
-"t  c #589849893A3A",
-"y  c #4D4D4DCE3BBC",
-"u  c #4E4E6C6C3EBF",
-"i  c #6C16419733DE",
-"p  c #6D6D48C83939",
-"a  c #7F7F4C4C3F3F",
-"s  c #7CFD55D63B3B",
-"d  c #727262623E3E",
-"f  c #459B42ED4298",
-"g  c #4C4C49494B4B",
-"h  c #4AA048F35701",
-"j  c #42985E085BB1",
-"k  c #454552525252",
-"l  c #5CDC4ACB4F4F",
-"z  c #57D84C4C4545",
-"x  c #545456564242",
-"c  c #5ADB515156D7",
-"v  c #5F5F5F5F6060",
-"b  c #55D665E65EDF",
-"n  c #4F4F6F6F5151",
-"m  c #494967E87272",
-"M  c #4E4E71716D6D",
-"N  c #4949747476F7",
-"B  c #56566F196D6D",
-"V  c #6B6B40C055D6",
-"C  c #69E957D845C6",
-"Z  c #686853D45555",
-"A  c #747448F34141",
-"S  c #72C85C5C4BF6",
-"D  c #77AA56894679",
-"F  c #78225DB35C06",
-"G  c #74F549495050",
-"H  c #69BF545465BB",
-"J  c #767658586868",
-"K  c #73736F6F4F4F",
-"L  c #787866E755D6",
-"P  c #69696E1855AB",
-"I  c #65E664E56363",
-"U  c #7E7E6F6F7B7B",
-"Y  c #7B7B7AE17AE1",
-"T  c #793974747333",
-"R  c #6CED70B06D6D",
-"E  c #3C3C5C5C8080",
-"W  c #5E5E7E7E9797",
-"Q  c #74F579F98403",
-"!  c #7E7E77778080",
-"~  c #68687B7B8484",
-"^  c #76F7858579F9",
-"/  c #73B3844484C4",
-"(  c #6D6D8C0CB130",
-")  c #999917171D1D",
-"_  c #8585222223A4",
-"`  c #94EA3389297F",
-"'  c #93933F3F39BA",
-"]  c #8D8D28A82B2B",
-"[  c #A9291A9A20A0",
-"{  c #A62534B436B7",
-"}  c #B9B92DAE2AAB",
-"|  c #9E9E3D3D4040",
-" . c #A8A829AA45C6",
-".. c #B938363669E9",
-"X. c #830246C73AFB",
-"o. c #929245453A3A",
-"O. c #828259593E3E",
-"+. c #A953454539E4",
-"@. c #B2B2494938B8",
-"#. c #BDBD47472C2C",
-"$. c #880748C844C5",
-"%. c #8B8B5B054848",
-"&. c #86055BDC56D7",
-"*. c #9D1D4D4D4646",
-"=. c #9211565647C8",
-"-. c #888845455656",
-";. c #880758586464",
-":. c #890968684DCE",
-">. c #8D0D686851D1",
-",. c #818172725151",
-"<. c #9E9E6E6E5454",
-"1. c #95D573B35A5A",
-"2. c #9A9A64644A4A",
-"3. c #989863636E6E",
-"4. c #959564BA68BE",
-"5. c #9C1C74F46262",
-"6. c #88076F2F6BEC",
-"7. c #A5244A4A4646",
-"8. c #A322535341C1",
-"9. c #A4A456565C5C",
-"0. c #B43358584747",
-"q. c #B6B64B4B4040",
-"w. c #B939565671F1",
-"e. c #A82775F65C5C",
-"r. c #BFBF64644E4E",
-"t. c #B851693655BC",
-"y. c #B53572F357D8",
-"u. c #AA2966E74FD0",
-"i. c #B8377B7B6565",
-"p. c #BDBD7D7D7E7E",
-"a. c #AD576F6F6DC3",
-"s. c #C5C538383939",
-"d. c #DCDC39BA7DFD",
-"f. c #CACA32326B6B",
-"g. c #C2C242423636",
-"h. c #C1C149494B4B",
-"j. c #C7C75ADA6FF0",
-"k. c #C4C476765555",
-"l. c #CBCB6E6E6E6E",
-"z. c #C0C07E7E7474",
-"x. c #D3D361616464",
-"c. c #8D377D7D8BE1",
-"v. c #8F8F7A7A8787",
-"b. c #EAEA3D3D8585",
-"n. c #D95843438201",
-"m. c #D8D855558686",
-"M. c #CECE6B6B8888",
-"N. c #929294944141",
-"B. c #8B8B80807D7D",
-"V. c #95958C3677CD",
-"C. c #A0A097975E5E",
-"Z. c #BABA81815D5D",
-"A. c #ADAD850564E4",
-"S. c #B979888868E9",
-"D. c #B93988077979",
-"F. c #BDBD91916C6C",
-"G. c #BA6497417979",
-"H. c #A1A1939377F8",
-"J. c #A3A3A0A05E5E",
-"K. c #B9B9AFAF7F7F",
-"L. c #C84796967373",
-"P. c #D7579D9D7575",
-"I. c #C7C78E8E6969",
-"U. c #DBDBA3227AFA",
-"Y. c #CDCDC6C67070",
-"T. c #822C8D37842E",
-"R. c #888886868787",
-"E. c #858586F488AD",
-"W. c #8787923C8383",
-"Q. c #890893129191",
-"!. c #94138C0C9191",
-"~. c #94949292943E",
-"^. c #939399439741",
-"/. c #9A079A9A9B52",
-"(. c #943E8B358DE3",
-"). c #9F9F9F9FA6A6",
-"_. c #8C8C9E9EA4A4",
-"`. c #8787A0A0A1A1",
-"'. c #9E04A370A1D4",
-"]. c #9595A928ACAC",
-"[. c #9898A3A3B6B6",
-"{. c #AA779C9C97FE",
-"}. c #BA3A87068ACA",
-"|. c #B8B898178807",
-" X c #B6F6981893D3",
-".X c #ABAB8E0E8A0A",
-"XX c #AFAFAEAE8585",
-"oX c #AAAAAC2C9898",
-"OX c #A2F8A2AEA34D",
-"+X c #AA54A34DA3F9",
-"@X c #A6D1A9A9AB00",
-"#X c #A868AC2CB4B4",
-"$X c #A868B4F4B8F8",
-"%X c #B5B5A3F9A4A4",
-"&X c #BD67AD57AB00",
-"*X c #BBBBA8A8A7A7",
-"=X c #BEBEB3B3AEAE",
-"-X c #B90EB7B7B9B9",
-";X c #BC66BB90BD12",
-":X c #B60BB409B50A",
-">X c #B2B2ACACB3B3",
-",X c #84849F9FC4C4",
-"<X c #9D9DB3B3C3C3",
-"1X c #ACACBDBDC645",
-"2X c #BCBCBD7DC140",
-"3X c #B4B4BABAC6C6",
-"4X c #BF3FC1C1C747",
-"5X c #BEBEC3C3CACA",
-"6X c #B8B8C2C2D0D0",
-"7X c #C7C7971784C4",
-"8X c #D6559A199A9A",
-"9X c #C1C183838888",
-"0X c #CB4BA1A19110",
-"qX c #D817ADAD8BCB",
-"wX c #CACAAFAFB1B1",
-"eX c #CB75B761B80D",
-"rX c #D958AC2CABAB",
-"tX c #D393B7B7B979",
-"yX c #CBCBA7A7ABAB",
-"uX c #E3E3B6368F8F",
-"iX c #E968ABEBAC6C",
-"pX c #E4E4B0B0AFAF",
-"aX c #E4E4B862BA0F",
-"sX c #F1F1BB65BCBC",
-"dX c #C3C3BFBFC217",
-"fX c #D5D5BCBCC140",
-"gX c #D5D5CECE8F8F",
-"hX c #D8D8D4D48E8E",
-"jX c #C908C6C6A7E7",
-"kX c #C6C6C4C4B1B1",
-"lX c #F2F2C5C59A9A",
-"zX c #F0F0E3E38B8B",
-"xX c #C295C31DC52E",
-"cX c #C45DC4F7CACA",
-"vX c #CA1FC2C2C61B",
-"bX c #CA8AC706CB0A",
-"nX c #CBAFCB9DCCD5",
-"mX c #C7C7C9C9CBCB",
-"MX c #CE0DCF8FD454",
-"NX c #CACACFCFD8D8",
-"BX c #CFCFD0D0D2D2",
-"VX c #D857C1C1C443",
-"CX c #D0D0CECED251",
-"ZX c #D305D339D4D4",
-"AX c #D9D9D857D999",
-"SX c #D352D5D5CB4A",
-"DX c #DD32DEDEE38D",
-"FX c #EBEBD0D0CDCD",
-"GX c #EAEADA59D615",
-"HX c #E3E3C5C5C8C8",
-"JX c #E0E0DFDFE2E2",
-"KX c #E4E4E5E5DADA",
-"LX c #E867E968E665",
-"PX c #FFC8FFCAFFD3",
-"IX c #F1F1F1F1F1F1",
-"UX c #F271EF6FEBEB",
-"YX c None",
-/* pixels */
-"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
-"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
-"YXYXYXYXYX                                                      ",
-"YXYXYXYX                                                        ",
-"YXYXYX  X                                                     & ",
-"YXYX        f /.OX/./././.^.^.~.~.~.!.R.E.R.R.E.E.E.Y Y Y Y Y @X",
-"YXYX      & LXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPX",
-"YXYX      Y PXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPXPX",
-"YXYX      OXPXPXUXSXZXnXnXBXnXnXnXnXjXhXhXV.< W < F F m _.bXMXbX",
-"YXYX      +XPXPXIXZXZXxXcXkXcX4XnXZXUXzXY.< 1 > o 9 A = / cXxXxX",
-"YXYX      '.PXPXGXXXjXjXwXoXbXxXnX4XnXXXP = : ; X % q O ~ xXMXCX",
-"YXYX      OXPXPXZXv Z I - k R @X@X(.J H h k k t l &.*.# Q xXDXDX",
-"YXYX      '.PXPXDX~ / b 3 6.b _.Q e _ F Q./ J.N.P 1.*.y ^.5XNX6X",
-"YXYX      +XPXPXSXk C @.X.D o.=./ 3 =.1.oX].H.J.n O.q : T.3X[.Q ",
-"YXYX      '.PXPXSXr :.g.+.o.{ y.^ S D q H.$XH.:.s O.t u R.<Xc.J ",
-"YXYX      OXPXPXmXy L.` y.0.+.U.S 7 . & V.^.:.o.g.` :.,.(.[.6.-.",
-"YXYX      OXPXPXbXS U.` y.+.' P.C 0 @ * r d p D y.$.u y W.v.;.7.",
-"YXYX      OXPXPXZX>.S.D U ;.| I.1.:.+ $ y S & I &X| t r ^ (.3.3.",
-"YXYX      OXPXPXGXZ.y. X:X{.&XG.A.,.: K L.F.A.' { [ 4 : T c.-.V ",
-"YXYX      '.PXPXGXk.k.L.{.G.=XS.<.S x K S.G.e._ ) [ 6 3 T Q e V ",
-"YXYX      OXPXPXFX8.o.6.6.F 6.u.t.t % 3 T *X{..X}.}..XB./.U 5 e ",
-"YXYX      '.PXPXFX{ _ 0 4 5 3 % 8 ` 4.+X>X-X-X;XMXdX2XnXnX}.h. .",
-"YXYX      OXPXPXGXl.x.x.x.9.Z c g v -X2X;XkXxXbXMXcXdXbXCX%X3.J ",
-"YXYX      ).PXPXPXIXkX^.Q.OX@X@X#X:X2XdXnXnXMXmXdXcXbXMXZXCXdXcX",
-"YXYX      OXPXPXPXPX$X< N n b j R T..XHX3X-X;X+XkX#XMXMXAXMXCXbX",
-"YXYX      OXPXPXPXPX#X: M ^ / /.{.{. XsXtXtXeX>XdXbXfXbXDXCXmXxX",
-"YXYX      OXPXPXPXPX'.# % y h f wXyXrXrXtXsXwX X XaXsXVXDXxXbX4X",
-"YXYX      OXPXPXPXPX/.% i p Z % a.a.5.|.qXqX}.D.7XiXsXfXNX4X;XxX",
-"YXYX      +XPXPXPXPX{.4 A a.$.@.r.e.&.0XuXlX}.j.w.M.iXfX$X$X1X<X",
-"YXYX      +XPXPXPXPX%Xa <.a.@.} L.U.t.pXiXp.w.d.n.m.8XfX,X( m W ",
-"YXYX      '.PXPXPXPX*X2.U.P.0.} U.uXS.0XiXM.f.n.b.n.9XtX( E l S ",
-"YXYX    . @XPXPXPXPX%XD D.L.I.s.u.I.S.7X8X9. .f.f...9XeX!.F i q "
-};
