@@ -1,6 +1,0 @@
-# Example watch control file for uscan
-# Rename this file to "watch" and then you can run the "uscan" command
-# to check for upstream updates and more.
-# Site		Directory		Pattern			Version	Script
-version=2
-http://linux.bydg.org/~yogin/qcomicbook-(.*)\.tar\.gz	debian	uupdate
