@@ -1,93 +1,0 @@
-qcomicbook (0.2.6-0) unstable; urgency=low
-
-  * New Upstream Release.
-  * Correcting debianized files.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Tue, 27 Dec 2005 22:00:00 +0100
-
-qcomicbook (0.2.5-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Sun, 13 Nov 2005 21:05:24 +0100
-
-qcomicbook (0.2.4-0) unstable; urgency=low
-
-  * New Upstream Release.
-  * Updated manpage.
-  * Ubuntu compatibility and building process enabled. ;)
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Wed, 03 Aug 2005 23:14:03 +0100
-
-qcomicbook (0.2.3-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Sat, 09 Jul 2005 18:04:00 +0100
-
-qcomicbook (0.2.2-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Thu, 19 Jun 2005 22:21:00 +0100
-
-qcomicbook (0.2.1-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Sun, 15 May 2005 19:00:00 +0100
-
-qcomicbook (0.2.0-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Mon, 09 May 2005 22:07:00 +0100
-
-qqcomicbook (0.1.9-0) unstable; urgency=low
-
-  * New Upstream Release.
-  * Updated control and manpage.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Wed, 04 May 2005 00:47:04 +0100
-
-qcomicbook (0.1.8-0) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Sat, 23 Apr 2005 18:01:00 +0100
-
-qcomicbook (0.1.7-0) unstable; urgency=low
-
-  * New Upstream Release.
-  * Changing package revision to -0 since it's not official.
-  * Start of debian/rules cleaning.
-  * Added qcomicbook.desktop (with Polish Name and Comment)
-    and qcomicbook.png to KDE menu.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Tue, 05 Apr 2005 22:34:59 +0200
-
-qcomicbook (0.1.6-1) unstable; urgency=low
-
-  * New Upstream Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Wed, 30 Mar 2005 22:01:28 +0100
-
-qcomicbook (0.1.5-1) unstable; urgency=low
-
-  * New Upstream Release.
-  * Man updated with text from help.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Sun, 27 Feb 2005 17:02:36 +0100
-
-qcomicbook (0.1.4-1) unstable; urgency=low
-
-  * New Upstream Release.
-  * Changed build scripts because of name changes from qcomic to qcomicbook.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Tue, 01 Feb 2005 03:07:24 +0100
-
-qcomicbook (0.1.3-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- Michal Pena (Cyb.org) <mp@horisone.com>  Mon, 24 Jan 2005 23:57:45 +0100
