@@ -1,3 +1,7 @@
+2006-06-26:  0.2.8       -- added support for free unrar
+			 -- new hotkeys: Ctrl+Q, Ctrl+Home, Ctrl+End
+			 -- updated autoconf bnv_have_qt macro
+
 2006-03-02:  0.2.7       -- fixed bug with status bar hiding in fullscreen mode 
                             if 'Hide statusbar in fullscreen mode' option is on.
 
